syntax = "proto3";

package patient_events;

option java_multiple_files = true;

message PatientEvent {
    string patientId = 1;
    string name = 2;
    string email = 3;
    string event_Type = 4;
}